--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This site is hosted on GitHub Pages.</p>
+
+    <!-- Load the JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
