--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My GitHub Website</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Norbeau – French Vocabulary Assistant</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This site is hosted on GitHub Pages.</p>
+  <h1>Norbeau</h1>
+  <p>Your personal French vocabulary assistant</p>
+  <p>Norbeau, votre assistant personnel de vocabulaire français</p>
 
-    <!-- Load the JavaScript -->
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
