--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Norbeau</h1>
   <p>Your personal French vocabulary assistant</p>
-  <p>Norbeau, votre assistant personnel de vocabulaire français</p>
+  <p>Votre assistant personnel de vocabulaire français</p>
 
   <script src="script.js"></script>
 </body>
