--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <p>Your personal French vocabulary assistant</p>
   <p>Votre assistant personnel de vocabulaire français</p>
 
+  <!-- Login Button -->
+  <button onclick="window.location.href='login.html';">Login / Connexion</button>
+
   <script src="script.js"></script>
 </body>
 </html>
