--- a/login.html
+++ b/login.html
@@ -3,10 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <title>Login – Norbeau</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 40px;
+      background-color: #f5f5f5;
+    }
+
+    input {
+      display: block;
+      margin: 10px auto;
+      padding: 10px;
+      width: 250px;
+      font-size: 16px;
+    }
+
+    .button-group {
+      margin-top: 20px;
+    }
+
+    button {
+      margin: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    a {
+      display: block;
+      margin-top: 20px;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1>Login Page</h1>
-  <p>This is where the login form will go.</p>
+
+  <form>
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required>
+
+    <div class="button-group">
+      <button type="submit">Login</button>
+      <button type="button" onclick="alert('Admin login coming soon!')">Admin Login</button>
+      <button type="button" onclick="window.location.href='sign_up.html'">Sign Up</button>
+      <button type="button" onclick="window.location.href='forgot_password.html'">Forgot Password</button>
+    </div>
+  </form>
+
   <a href="index.html">← Back to home</a>
 </body>
 </html>
