--- a/webpage/login.html
+++ b/webpage/login.html
@@ -40,9 +40,9 @@
 <body>
   <h1>Login Page</h1>
 
-  <form>
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
+  <form onsubmit="handleLogin(event)">
+    <input type="text" name="username" id="username" placeholder="Username" required>
+    <input type="password" name="password" id="password" placeholder="Password" required>
 
     <div class="button-group">
       <button type="submit">Login</button>
@@ -53,5 +53,33 @@
   </form>
 
   <a href="index.html">← Back to home</a>
+
+  <script>
+    function handleLogin(event) {
+      event.preventDefault();
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      fetch("http://localhost:5000/login", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ username, password })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.status === "success") {
+          window.location.href = `user_page.html?username=${encodeURIComponent(username)}`;
+        } else {
+          alert(data.message);
+        }
+      })
+      .catch(error => {
+        console.error("Error:", error);
+        alert("Server error. Please try again later.");
+      });
+    }
+  </script>
 </body>
 </html>
