--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Norbeau – French Vocabulary Assistant</title>
-  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="refresh" content="0; URL='login.html'" />
+  <title>Redirecting...</title>
 </head>
 <body>
-  <h1>Norbeau</h1>
-  <p>Your personal French vocabulary assistant</p>
-  <p>Votre assistant personnel de vocabulaire français</p>
-
-  <!-- Login Button -->
-  <button onclick="window.location.href='login.html';">Login / Connexion</button>
-
-  <script src="script.js"></script>
+  <p>Redirecting to login...</p>
 </body>
 </html>
