--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      fetch("http://localhost:5000/login", {
+      fetch("https://norbeau.pythonanywhere.com/login", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
