--- a/login.html
+++ b/login.html
@@ -40,7 +40,8 @@
 <body>
   <h1>Login Page</h1>
 
-  <form onsubmit="handleLogin(event)">
+  <!-- ✅ Add method="post" -->
+  <form method="post" onsubmit="handleLogin(event)">
     <input type="text" name="username" id="username" placeholder="Username" required>
     <input type="password" name="password" id="password" placeholder="Password" required>
 
@@ -56,7 +57,8 @@
 
   <script>
     function handleLogin(event) {
-      event.preventDefault();
+      event.preventDefault();  // prevent default form submission
+
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
