--- a/login.html
+++ b/login.html
@@ -40,7 +40,6 @@
 <body>
   <h1>Login Page</h1>
 
-  <!-- ✅ Add method="post" -->
   <form method="post" onsubmit="handleLogin(event)">
     <input type="text" name="username" id="username" placeholder="Username" required>
     <input type="password" name="password" id="password" placeholder="Password" required>
@@ -57,8 +56,7 @@
 
   <script>
     function handleLogin(event) {
-      event.preventDefault();  // prevent default form submission
-
+      event.preventDefault();
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
@@ -72,7 +70,7 @@
       .then(res => res.json())
       .then(data => {
         if (data.status === "success") {
-          window.location.href = `user_page.html?username=${encodeURIComponent(username)}`;
+          window.location.href = `user_page.html?username=${encodeURIComponent(username)}&word_count=${encodeURIComponent(data.word_count)}`;
         } else {
           alert(data.message);
         }
